log/build_2021-04-24_09-39-29/real_sender/stderr.log
  File "/home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/python_programs/real_sender.py", line 30
    print(‘Hello’, end=’‘)
                ^
SyntaxError: invalid character in identifier

